kube/booking-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gym-booking
  template:
    metadata:
      labels:
        app: gym-booking
    spec:
      containers:
      - name: gym-booking
        image: gymappregistryunique99.azurecr.io/gym-booking:v1
        ports:
        - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: gym-booking-service
spec:
  selector:
    app: gym-booking
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
  type: ClusterIP
