kube/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gym-frontend
  template:
    metadata:
      labels:
        app: gym-frontend
    spec:
      containers:
      - name: gym-frontend
        image: gymappregistryunique99.azurecr.io/gym-frontend:v2
        ports:
        - containerPort: 80
        # Environment variables so the React/Vue app knows where the APIs are
---
apiVersion: v1
kind: Service
metadata:
  name: gym-frontend-service
spec:
  selector:
    app: gym-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
