kube/membership-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-membership
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gym-membership
  template:
    metadata:
      labels:
        app: gym-membership
    spec:
      containers:
      - name: gym-membership
        image: gymappregistryunique99.azurecr.io/gym-membership:v1
        ports:
        - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: gym-membership-service
spec:
  selector:
    app: gym-membership
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
  type: ClusterIP
