kube/notifier-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-notifier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gym-notifier
  template:
    metadata:
      labels:
        app: gym-notifier
    spec:
      containers:
      - name: gym-notifier
        image: gymappregistryunique99.azurecr.io/gym-notifier:v1
        ports:
        - containerPort: 4003
---
apiVersion: v1
kind: Service
metadata:
  name: gym-notifier-service
spec:
  selector:
    app: gym-notifier
  ports:
    - protocol: TCP
      port: 4003
      targetPort: 4003
  type: ClusterIP # Keeps it private
