kube/gym-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gym-app-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - the-fitness-arena.duckdns.org
    secretName: the-fitness-arena-tls
  rules:
  - host: the-fitness-arena.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gym-frontend-service
            port:
              number: 80
